# monotrail-resolve

./: .gitignore  Cargo.toml  Readme.md  lock.ipynb  lock.py  pyproject.toml  terms.dic
.github/workflows/: test.yml
pypi_types/: Cargo.toml
pypi_types/.cargo/: config.toml
pypi_types/src/: helper.rs  lib.rs  pypi_releases.rs
pypi_types_crate/: Cargo.toml  pyproject.toml
pypi_types_crate/python/pypi_types/: __init__.py  __init__.pyi  core_metadata.py  core_metadata.pyi  pep440_rs.py  pep440_rs.pyi  pep508_rs.py  pep508_rs.pyi  pypi_metadata.py  pypi_metadata.pyi  pypi_releases.py  pypi_releases.pyi
pypi_types_crate/src/: core_metadata.rs  helper.rs  lib.rs  marker_intersection.rs  normalized_marker_expression.rs  pypi_metadata.rs  pypi_releases.rs  version_intersection.rs
resolve_prototype/: __init__.py  benchmark_version.py  common.py  compare_with_pip.py  metadata.py  package_index.py  resolve.py  resolve_multiple.py  sdist.py
resolve_prototype/compare/: common.py  compare_all.py  compare_with_pip.py  compare_with_poetry.py  inputs.txt  pip_compare_all.py  pip_freeze.py  poetry_lock.py
resolve_prototype/scripts/: resolve_top_packages.py
resolve_rs/: Cargo.toml
resolve_rs/src/: helper.rs  lib.rs
test/: pep517_api_check.ipynb  test_resolve.py
test-data/fake_cache/wheel_metadata/: cycler-0.11.0-py3-none-any.whl.metadata  matplotlib-3.6.2-cp310-cp310-macosx_10_12_universal2.whl.metadata  numpy-1.24.1-cp310-cp310-macosx_10_9_x86_64.whl.metadata  packaging-23.0-py3-none-any.whl.metadata  six-1.16.0-py2.py3-none-any.whl.metadata
test-data/matplotlib/: json_metadata.json.zst  requirements.txt  simple.json.zst
test-data/meine_stadt_transparent/: json_metadata.json.zst  requirements.txt  sdist_metadata.json.zst  simple.json.zst
test-data/pandas/: json_metadata.json.zst  requirements.txt  simple.json.zst
