[project]
requires-python = ">=3.8"

[tool.poetry]
name = "resolve"
version = "0.1.0"
description = "faster dependency resolution prototype"
authors = ["konstin <konstin@mailbox.org>"]
readme = "Readme.md"

# For the python resolve_protoype implementation; the rust part has no python deps
[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.1.0"
build = { git = "https://github.com/pypa/build", rev = "45ed55a9f19032718337c0fdd0176b34667d392b" }
httpx = { version = "^0.23.1", extras = ["http2"] }
importlib-metadata = "^6.0.0"
orjson = "^3.8.3"
pydantic = "^1.10.3"
respx = "^0.20.1"
tomlkit = "^0.11.6"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^23.1.0" }
jupyter = "^1.0.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.21.2"
requests = "^2.28.2"
ruff = "^0.0.258"
tqdm = "^4.65.0"
zstandard = "^0.20.0"
maturin = "^0.14.15"
py-spy = "^0.3.14"

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "--tb=short"

[tool.ruff]
target-version = "py38"
extend-select = [
    "B" # flake8-bugbear
]

[tool.black]
skip_magic_trailing_comma = true