[project]
name = "resolve"
version = "0.1.0"
requires-python = ">=3.10"

[tool.poetry]
name = "resolve"
version = "0.1.0"
description = "faster dependency resolution prototype"
authors = ["konstin <konstin@mailbox.org>"]
readme = "Readme.md"

# For the python resolve_protoype implementation; the rust part has no python deps
[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1.0"
build = { git = "https://github.com/pypa/build", rev = "dd2131654472d4d66028162253fa27d7d1157fc4" }
httpx = { version = "^0.24.0", extras = ["http2"] }
importlib-metadata = "^6.0.0"
orjson = "^3.8.3"
pydantic = "^1.10.3"
respx = "^0.20.1"
tomlkit = "^0.12.1"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^23.1.0" }
jupyter = "^1.0.0"
maturin = "^1.2.3"
py-spy = "^0.3.14"
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.22.0"
requests = "^2.28.2"
ruff = "^0.0.290"
tqdm = "^4.65.0"
zstandard = "^0.21.0"

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "--tb=short"

[tool.ruff]
extend-select = ["B", "PT", "PTH", "TRY", "UP"]
ignore = ["TRY003", "TRY400"]

[tool.ruff.per-file-ignores]
"pypi_types_crate/python/pypi_types/__init__.py" = ["F403"]
"**/__init__.py" = ["F401"]

[tool.black]
skip_magic_trailing_comma = true