[package]
name = "pypi_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py38", "anyhow"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
