[package]
name = "pypi_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
once_cell = "1.17.1"
pep440_rs = { git = "https://github.com/konstin/pep440-rs", features = ["pyo3"] }
pep508_rs = { git = "https://github.com/konstin/pep508_rs", rev = "f50cdc04f2d98a7671230d955a22a11238a3e426", features = ["pyo3"] }
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-log = { version = "0.8.0" }
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"

# For pyo3-log
# Blocked on https://github.com/PyO3/pyo3/pull/2786
[patch.crates-io]
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "cfg-feature-pyo3" }
