[package]
name = "pypi_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indexmap = "1.9.3"
mailparse = "0.14.0"
once_cell = "1.17.1"
pep440_rs = { version = "0.3.4", features = ["pyo3", "serde"] }
pep508_rs = { version = "0.1.4", features = ["pyo3", "serde"] }
pyo3 = { version = "0.18.2", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-log = { version = "0.8.0" }
regex = "1.7.2"
rfc2047-decoder = "0.2.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tracing = "0.1.37"

[patch.crates-io]
pep440_rs = { git = "https://github.com/konstin/pep440-rs" }