[package]
name = "pypi_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
indexmap = "1.9.3"
mailparse = "0.14.0"
once_cell = "1.17.1"
pep440_rs = { version = "0.3.9", features = ["pyo3", "serde"] }
pep508_rs = { version = "0.2.1", features = ["pyo3", "serde"] }
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-log = "0.8.1"
regex = "1.8.1"
rfc2047-decoder = "0.2.2"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
