[package]
name = "pypi_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indexmap = "2.0.1"
mailparse = "0.14.0"
once_cell = "1.18.0"
pep440_rs = { version = "0.3.11", features = ["pyo3", "serde"] }
pep508_rs = { version = "0.2.3", features = ["pyo3", "serde"] }
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-log = "0.8.3"
regex = "1.9.5"
rfc2047-decoder = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tracing = "0.1.37"
