[package]
name = "resolve_rs"
version = "0.1.0"
edition = "2021"
description = "Untangles the snake and all its dependencies"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-log = { version = "0.8.0" }
regex = "1.7.2"
tracing = "0.1.37"
